package ma.newdev.rh.entity;

public enum Role {
    OWNER,
    RH,
    EMPLOYE
}
